# RmikuOS

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  cwnd.csv  first_run.sh  kernel-la  kernel-rv  run.sh  t.sh  tmp.py  trampoline.S  trampoline.elf  trampoline.ld
.cargo/: config.toml
cargo-config/: config.toml
docs/dot/: arch.dot  gcn.dot  memory.dot  process.dot  run.sh  signal.dot  vfs.dot
kernel/src/: io.rs  loader.rs  main.rs  math.rs  oscomp.rs  panic.rs  shutdown.rs  sync.rs  uart.rs
logs/: adaptive_alpha_cmds.txt  adaptive_alpha_raw.log.bak  alpha_cmds.txt  alpha_records.csv  alpha_summary.csv  dynamic_load_cmds.txt  edge_deadline_cmds.txt  edge_deadline_records.csv  edge_deadline_summary.csv  smoother_adaptive_alpha_cmds.txt  smoother_adaptive_alpha_raw.log.bak  smp_bench_cmds.txt  stride_cmds.txt  stride_summary.csv  train_cora_cmds.txt
logs/jvm/: new_riscv  (+4 more)
scripts/: analyze_alpha_log.py  analyze_edge_deadline_log.py  analyze_stride_ticket_log.py  gbn_qemu.sh  gen_adaptive_alpha_cmds.sh  gen_alpha_cmds.sh  gen_edge_deadline_cmds.sh  gen_smoother_adaptive_cmds.sh  gen_stride_cmds.sh  plot_adaptive_alpha_log.py  plot_aimd_vs_fixed.py  plot_alpha_arg.py  plot_alpha_summary.py  plot_dynamic_load.py  plot_edge_deadline_summary.py  plot_jvm_bench.py  plot_sr.py  plot_sr2.py  rs.sh  sr_run.sh  tcp_exp.sh  tcp_loss_sweep.py  tcp_loss_sweep.sh  tcp_plot.py  tcp_size_sweep.py  tcp_size_sweep.sh
tftpboot/: hello.txt  world_is_mine.txt
user/: build.py  linker-loongarch64.ld  linker-riscv64.ld  mkfs_ext4.sh
(+583 files in other folders)
