[package]
name = "RmikuOS"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "RmikuOS"
path = "kernel/src/main.rs"  

[build-dependencies]
cc = "1.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"

[dependencies]
log = { version = "0.4", default-features = false }
buddy_system_allocator = "0.13"